component for each widget

--- a/client/src/apps/game-center/components/customWidgets/lg-image-poll/image-poll-option/image-poll-option.css
+++ b/client/src/apps/game-center/components/customWidgets/lg-image-poll/image-poll-option/image-poll-option.css
@@ -1,13 +1,13 @@
-lg-image-poll-option[selected] {
+image-poll-option[selected] {
   border: 2px solid #225696;
 }
 
-lg-image-poll-option[selected] livelike-description[selected] {
+image-poll-option[selected] livelike-description[selected] {
   opacity: 1;
 }
 
-lg-image-poll-option {
-  background: #F8F4F1;
+image-poll-option {
+  background: #f8f4f1;
   box-shadow: 0 0 0 1px transparent inset;
   overflow: hidden;
   display: flex;
@@ -15,17 +15,17 @@ lg-image-poll-option {
   cursor: pointer;
   border-radius: 8px;
   height: 50px;
-  border: 2px solid #F8F4F1;
+  border: 2px solid #f8f4f1;
   transition: border ease 0.3s;
 }
-lg-image-poll-option:hover:not([disabled]) {
+image-poll-option:hover:not([disabled]) {
   border: 2px solid #225696;
 }
-lg-image-poll-option livelike-image img {
+image-poll-option livelike-image img {
   height: 48px;
   width: 48px;
 }
-lg-image-poll-option .livelike-voting-image-container {
+image-poll-option .livelike-voting-image-container {
   width: 100%;
   display: flex;
   justify-content: space-between;
@@ -33,8 +33,8 @@ lg-image-poll-option .livelike-voting-image-container {
   column-gap: 8px;
 }
 
-lg-image-poll-option .livelike-voting-image-container livelike-description {
-  color: #02235C;
+image-poll-option .livelike-voting-image-container livelike-description {
+  color: #02235c;
   font-style: normal;
   font-weight: 600;
   font-family: "Bai Jamjuree";
@@ -43,10 +43,10 @@ lg-image-poll-option .livelike-voting-image-container livelike-description {
   line-height: 22px;
 }
 
-lg-image-poll-option livelike-percentage {
+image-poll-option livelike-percentage {
   display: none;
 }
 
-lg-image-poll-option[disabled] {
+image-poll-option[disabled] {
   cursor: not-allowed;
 }
