--- a/client/src/apps/game-center/components/customWidgets/lg-cheer-meter/cheer-meter/cheer-meter.css
+++ b/client/src/apps/game-center/components/customWidgets/lg-cheer-meter/cheer-meter/cheer-meter.css
@@ -60,7 +60,7 @@ cheer-option {
 }
 
 cheer-meter livelike-description {
-  color: #02235C;
+  color: #02235c;
   font-size: 14px;
   font-style: normal;
   font-weight: 600;
@@ -86,7 +86,7 @@ vote-count {
   transform: translate(-50%, -50%);
   z-index: 100;
   min-width: 42px;
-  background: #005BFF;
+  background: #005bff;
 }
 
 cheer-meter livelike-widget-body {
@@ -107,8 +107,26 @@ cheer-meter livelike-widget-root {
 }
 
 cheer-meter .expire-text {
-  margin-top: 24px;
-  color: rgba(255, 255, 255, 0.7);
-  font-size: 14px;
-  font-weight: 600;
+  margin-top: 16px;
+  color: #02235c;
+  font-family: "Bai Jamjuree";
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 110%;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+cheer-meter livelike-title {
+  color: #02235c;
+  font-family: "Bai Jamjuree";
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 110%;
+  text-transform: uppercase;
+  padding: 0px 16px 16px 0px;
+  width: 93%;
+  background: #fff;
 }
